syntax = "proto3";

option csharp_namespace = "Proto";

message CdnFileInfo {
  uint32 size = 1;
  uint32 hash = 2;
  repeated string urls = 4;
}

message UpdateInfo {
  uint32 version_code = 1;
  string version_name = 2;
  string description = 3;
  string package_link = 4;
  bool   force_update = 5;
  bool   enable_lib_download = 6;
  bool   enable_auto_update = 7;
  map<string, CdnFileInfo> cdn_files = 8;
}
